# benchm

./: WORKSPACE
expf/: expf.cc  main.cc
toolchains/gcc/: BUILD.bazel
toolchains/intel/: BUILD.bazel
