# Copyright 2016 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# This becomes the BUILD file for @local_config_cc// under non-BSD unixes.

load(":cc_toolchain_config.bzl", "cc_toolchain_config")
load("@rules_cc//cc:defs.bzl", "cc_toolchain", "cc_toolchain_suite")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache 2.0

cc_library(
    name = "malloc",
)

filegroup(
    name = "empty",
    srcs = [],
)

filegroup(
    name = "compiler_deps",
    srcs = glob(
        ["extra_tools/**"],
        allow_empty = True,
    ),
)

# This is the entry point for --crosstool_top.  Toolchains are found
# by lopping off the name of --crosstool_top and searching for
# the "${CPU}" entry in the toolchains attribute.
cc_toolchain_suite(
    name = "intel",
    toolchains = {
        "k8|compiler": ":cc-compiler-k8",
        "k8": ":cc-compiler-k8",
    },
)

cc_toolchain(
    name = "cc-compiler-k8",
    all_files = ":compiler_deps",
    ar_files = ":compiler_deps",
    as_files = ":compiler_deps",
    compiler_files = ":compiler_deps",
    dwp_files = ":empty",
    linker_files = ":compiler_deps",
    module_map = None,
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 1,
    toolchain_config = ":local",
    toolchain_identifier = "local",
)

cc_toolchain_config(
    name = "local",
    abi_libc_version = "local",
    abi_version = "local",
    compile_flags = [
        "-fstack-protector",
        "-Wall",
        "-Wthread-safety",
        "-Wself-assign",
        "-Wunused-but-set-parameter",
        "-Wno-free-nonheap-object",
        "-fcolor-diagnostics",
        "-fno-omit-frame-pointer",
    ],
    compiler = "compiler",
    coverage_compile_flags = ["--coverage"],
    coverage_link_flags = ["--coverage"],
    cpu = "k8",
    cxx_builtin_include_directories = [
        "/opt/intel/oneapi/tbb/2021.9.0/include",
        "/opt/intel/oneapi/mkl/2023.1.0/include",
        "/opt/intel/oneapi/dpl/2022.1.0/linux/include",
        "/opt/intel/oneapi/dev-utilities/2021.9.0/include",
        "/opt/intel/oneapi/compiler/2023.1.0/linux/compiler/include",
        "/opt/intel/oneapi/compiler/2023.1.0/linux/lib/clang/16/include",
        "/usr/local/include",
        "/usr/include",
        "/opt/intel/oneapi/compiler/2023.1.0/linux/lib/clang/16/share",
        "/opt/rh/gcc-toolset-12/root/usr/include/c++/12",
        "/opt/rh/gcc-toolset-12/root/usr/include/c++/12/x86_64-redhat-linux",
        "/opt/rh/gcc-toolset-12/root/usr/include/c++/12/backward",
    ],
    cxx_flags = ["-std=c++20"],
    dbg_compile_flags = ["-g"],
    host_system_name = "local",
    link_flags = [
        "-fuse-ld=lld",
        "-Wl,-no-as-needed",
        "-Wl,-z,relro,-z,now",
        "-B/opt/intel/oneapi/compiler/2023.1.0/linux/bin",
    ],
    link_libs = [
        "-lstdc++",
    ],
    opt_compile_flags = [
        "-g0",
        "-O2",
        "-D_FORTIFY_SOURCE=1",
        "-DNDEBUG",
        "-ffunction-sections",
        "-fdata-sections",
    ],
    opt_link_flags = ["-Wl,--gc-sections"],
    supports_start_end_lib = True,
    target_libc = "local",
    target_system_name = "local",
    tool_paths = {
        "ar": "/opt/rh/gcc-toolset-12/root/usr/bin/ar",
        "ld": "/opt/rh/gcc-toolset-12/root/usr/bin/ld",
        "llvm-cov": "/usr/bin/llvm-cov",
        "llvm-profdata": "/usr/bin/llvm-profdata",
        "cpp": "/opt/rh/gcc-toolset-12/root/usr/bin/cpp",
        "gcc": "/opt/intel/oneapi/compiler/2023.1.0/linux/bin/icx",
        "dwp": "/opt/rh/gcc-toolset-12/root/usr/bin/dwp",
        "gcov": "/opt/rh/gcc-toolset-12/root/usr/bin/gcov",
        "nm": "/opt/rh/gcc-toolset-12/root/usr/bin/nm",
        "objcopy": "/opt/rh/gcc-toolset-12/root/usr/bin/objcopy",
        "objdump": "/opt/rh/gcc-toolset-12/root/usr/bin/objdump",
        "strip": "/opt/rh/gcc-toolset-12/root/usr/bin/strip",
    },
    toolchain_identifier = "local",
    unfiltered_compile_flags = [
        "-no-canonical-prefixes",
        "-Wno-builtin-macro-redefined",
        "-D__DATE__=\"redacted\"",
        "-D__TIMESTAMP__=\"redacted\"",
        "-D__TIME__=\"redacted\"",
    ],
)
